# snaic-sg-taxi-weather-mesh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  techstack-info.md
.github/workflows/: ci-cd.yaml
.tmp_dagster_home_iyel0q9l/history/: runs.db
.tmp_dagster_home_iyel0q9l/history/runs/: .db  5c373ccf-42cf-4e21-a7d5-bf730a02a53e.db  84d30558-f69e-430d-a5ec-e2b29b5a4b8a.db  fa6d37d4-d138-4c18-a7c5-48b32e5f787a.db  index.db
.tmp_dagster_home_iyel0q9l/schedules/: schedules.db
docs/superpowers/plans/: 2026-06-24-fr2-decouple-forecast-schedule.md  2026-06-25-availability-pattern-champion-selection.md  2026-06-26-availability-pattern-feature-engineering.md  2026-06-27-availability-pattern-30min-lag.md
docs/superpowers/specs/: 2026-06-25-availability-pattern-champion-selection-design.md  2026-06-25-taxi-cluster-window-selector-design.md  2026-06-26-availability-pattern-feature-engineering-design.md  (+1 more)
scripts/: migrate_gbr_runs.py
sg_transit_weather_mesh/: __init__.py  utils.py
sg_transit_weather_mesh/api/: main.py  model_store.py  schemas.py
sg_transit_weather_mesh/assets/: analytics.py  ingestion.py
sg_transit_weather_mesh/notebooks/: dashboard.py  dashboard_data.py
tests/: test_analytics.py  test_api_health.py  test_dagster_definitions.py  test_dashboard_data.py  test_hotspots_export.py  test_ingestion.py  test_nowcast_export.py
web-dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-dashboard/src/: App.tsx  index.css
(+49 files in other folders)
