[project]
name = "snaic-sg-taxi-weather-mesh"
version = "0.1.0"
description = "Asset-Oriented ELT Transit and Meteorological Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.2.1",
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dlt[duckdb]>=0.4.0",
    "duckdb>=0.10.0",
    "marimo>=0.3.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "requests-mock>=1.11.0",
]

# Append this to the bottom of pyproject.toml
[tool.dagster]
module_name = "sg_transit_weather_mesh"
